getauxval is not available on openbsd/amd64
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr128 | --- | unaffected |
firefox134 | --- | unaffected |
firefox135 | --- | unaffected |
firefox136 | --- | fixed |
People
(Reporter: gaston, Assigned: az)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
my nightly failed: http://buildbot.rhaalovely.net/#/builders/3/builds/2327/steps/8/logs/stdio
79:34.46 /build/buildslave-amd64/mozilla-central-amd64/build/media/ffvpx/libavutil/cpu.c:304:12: error: call to undeclared function 'getauxval'; ISO C99 and later do not support implicit function declarations [-Werror,-Wimplicit-function-declaration]
79:34.46 return getauxval(type);
79:34.46 ^
79:34.46 /build/buildslave-amd64/mozilla-central-amd64/build/media/ffvpx/libavutil/cpu.c:304:12: note: did you mean 'ff_getauxval'?
79:34.46 /build/buildslave-amd64/mozilla-central-amd64/build/media/ffvpx/libavutil/cpu.c:301:15: note: 'ff_getauxval' declared here
79:34.46 unsigned long ff_getauxval(unsigned long type)
i dunno how HAVE_GETAUXVAL is true since i dont think we have that function, probably from one of the defines in https://searchfox.org/mozilla-central/search?q=HAVE_GETAUXVAL&path=&case=false®exp=false; will retry from a clean objdir, but
Comment 1•1 month ago
|
||
:az, since you are the author of the regressor, bug 1940449, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Comment 2•1 month ago
|
||
Set release status flags based on info from the regressing bug 1940449
Comment 3•29 days ago
|
||
I see the same on Solaris.
Looks like ffmpeg upstream changed the way HAVE_GETAUXVAL
is handled here. I'll put a patch up - let me know if it works for you.
Updated•28 days ago
|
Comment 7•28 days ago
|
||
bugherder |
Reporter | ||
Comment 8•26 days ago
|
||
m-c builds fine now on OpenBSD, thanks !
Description
•