Bug 1941102 - Disable getauxval in ffmpeg builds for BSD/Solaris r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D234050